# web-video-capture

./: CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  build.bat  build.sh
.github/workflows/: cmake.yml
src/: chrome-debug-connector.cpp  chrome-debug-connector.hpp  chrome-finder.cpp  chrome-finder.hpp  chrome_debug_connector.rs  curl-wrapper.hpp  exceptions.hpp  logger.hpp  main.rs  web-video-capture.cpp
